Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@ uaac member add event-audit-trail.zone.&lt;tenant uuid&gt;.user &lt;users...&gt;
     "uuid": "77173278-2ba0-457b-b660-09f9a9c87855",
     "tenantUuid": "4b2b0ad4-c54b-4e69-90b1-12d73e36662c",
     "maximumNumberOfEvents": 5,
-    "maximumNumberOfStoredEventsDays": -1
+    "maximumNumberOfStoredEventsDays": -1,
+    "stagedEventThreshold": 10
   }
 </code></pre>
 
@@ -530,6 +531,7 @@ uaac member add event-audit-trail.zone.&lt;tenant uuid&gt;.user &lt;users...&gt;
 <ul>
 <li>maximumNumberOfEvents - Maximum number of events to retain (Default=-1)</li>
 <li>maximumNumberOfStoredEventsDays - Maximum numbers of days of events to retain (Default=-1)</li>
+<li>stagedEventThreshold - Maximum staged events before events are permanently archived (Default=-1)</li>
 </ul>
 </li>
 </ul>
@@ -541,7 +543,8 @@ uaac member add event-audit-trail.zone.&lt;tenant uuid&gt;.user &lt;users...&gt;
 
 <pre><code>{
   "maximumNumberOfEvents": 100,
-  "maximumNumberOfStoredEventsDays": 30
+  "maximumNumberOfStoredEventsDays": 30,
+  "stagedEventThreshold": 50
 }
 </code></pre>
 
