Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -678,6 +678,8 @@ uaac member add event-audit-trail.zone.&lt;tenant uuid&gt;.user &lt;users...&gt;
 <li>
 <strong>1009</strong> - Invalid search query string</li>
 <li>
+<strong>1010</strong> - Event payload has exceeded the set limit</li>
+<li>
 <strong>1101</strong> - The archive does not exist</li>
 </ul>
 
