Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>The Predix Event Audit Trail Service is an data persistence service that represents user-defined data and states as events stored in a chronological manner.  The service provides a simple and scalable way to provide an audit trail for user applications.  The Predix Event Audit Trail is available as a service tile in the Predix Cloud and allows users to create, search, update, and delete events through a REST interface. </p>
 
+<p><strong>Please Note</strong> - <strong>Data at rest is <em>NOT</em> encrypted.  Please use discretion when storing sensitive data</strong></p>
+
 <h2>
 <a id="table-of-contents" class="anchor" href="#table-of-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Table of Contents</h2>
 
